--- a/imports/components/todo-list/todoList.html
+++ b/imports/components/todo-list/todoList.html
@@ -1,9 +1,19 @@
 <header>
-  <h1>Todo List</h1>
+   <h1>Todo List ( {{$ctrl.incompleteCount()}} )</h1>
+   <label class="hide-completed">
+    <input type="checkbox" ng-model="$ctrl.hideCompleted"/>
+    Hide Completed Tasks
+  </label>
+  <form class="new-task" ng-submit="$ctrl.addTask($ctrl.newTask)">
+     <input ng-model="$ctrl.newTask" type="text" name="text" placeholder="Type to add new tasks"/>
+ </form>
 </header>
 
 <ul>
-  <li ng-repeat="task in $ctrl.tasks">
+  <li ng-class="{'checked': task.checked}" ng-repeat="task in $ctrl.tasks">
+
+    <button class="delete" ng-click="$ctrl.removeTask(task)">&times;</button>
+    <input type="checkbox" ng-checked="task.checked" ng-click="$ctrl.setChecked(task)" class="toggle-checked"/>
     {{task.text}}
   </li>
 </ul>
