--- a/client/main.css
+++ b/client/main.css
@@ -62,6 +62,20 @@ form {
 .new-task input:focus{
     outline: 0;
 }
+input:focus{
+    outline: 0;
+}
+
+input.task-input {
+  display: inline;
+  box-sizing: border-box;
+  padding: 10px 0;
+  background: transparent;
+  border: none;
+  width: 90%;
+  padding-right: 80px;
+  font-size: 1em;
+}
 
 ul {
     margin: 0;
